// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing component testing renders UI as expected 1`] = `
<div
  className="landing"
>
  <h1>
    Chore Runner
  </h1>
  <p
    className="tagline"
  >
    The Smart Shared To-Do List
  </p>
  <div
    className="header-background"
  >
    <h2>
      Nobody's Perfect
    </h2>
  </div>
  <p>
    Is it done? Whose turn was it to do the dishes anyway? Didn't you ask her to finish that two days ago? How did you forget this?
  </p>
  <p>
    Chores pile up around you like loud, hungry cats around an empty dish. You can only deal with one thing at a time. So you ask your family to step in. But delegating to them is a thankless, stressful job. There's also that one family member with constant amnesia and the other who remembers too much.
  </p>
  <p>
    So you've decided that having a system in place will clear things up. Everyone has to get on board, which also means you have to bribe them. Sounds great, right?
  </p>
  <p>
    ChoreRunner can help here. This app keeps track of the status of any given task and assigns it to whoever you want. It also creates incentives for the more reluctant members of your family by making it into a game.
  </p>
  <h2>
    How it Works
  </h2>
  <p>
    To get started, you sign up and set your households.  Your minions then create their accounts. Each member of the family can be assigned jobs. When they finish, they check it off themselves. If it's up to your standards, you confirm the item is complete.
  </p>
  <p>
    Here comes the fun part! ChoreRunner has a reward system in place for completing chores. You can assign point values to tasks. For example, doing the dishes could be worth 5 points, mowing the lawn worth 10. Your family members can level up with enough points. A ranking board lets everyone see who is the most on top of their chores.
  </p>
  <p>
    ChoreRunner will organize that busy to-do list into something a little more manageable. Everyone wants to help, so help them show you how!
  </p>
  <div
    className="img-placeholder"
  >
    IMAGE/VIDEO PLACEHOLDER
  </div>
  <div
    className="img-placeholder"
  >
     IMAGE/VIDEO PLACEHOLDER
  </div>
  <div
    className="button-container"
  >
    <a
      className="kid-button"
      href="/kidLogin"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      tabIndex={1}
    >
      I am a kid
    </a>
    <a
      className="parent-button"
      href="/login"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      tabIndex={2}
    >
      I am a parent
    </a>
    <a
      className="new-button"
      href="/register"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      tabIndex={3}
    >
      I am new
    </a>
  </div>
</div>
`;

exports[`Landing component testing renders empty given no tabs 1`] = `
<div
  className="landing"
>
  <h1>
    Chore Runner
  </h1>
  <p
    className="tagline"
  >
    The Smart Shared To-Do List
  </p>
  <div
    className="header-background"
  >
    <h2>
      Nobody's Perfect
    </h2>
  </div>
  <p>
    Is it done? Whose turn was it to do the dishes anyway? Didn't you ask her to finish that two days ago? How did you forget this?
  </p>
  <p>
    Chores pile up around you like loud, hungry cats around an empty dish. You can only deal with one thing at a time. So you ask your family to step in. But delegating to them is a thankless, stressful job. There's also that one family member with constant amnesia and the other who remembers too much.
  </p>
  <p>
    So you've decided that having a system in place will clear things up. Everyone has to get on board, which also means you have to bribe them. Sounds great, right?
  </p>
  <p>
    ChoreRunner can help here. This app keeps track of the status of any given task and assigns it to whoever you want. It also creates incentives for the more reluctant members of your family by making it into a game.
  </p>
  <h2>
    How it Works
  </h2>
  <p>
    To get started, you sign up and set your households.  Your minions then create their accounts. Each member of the family can be assigned jobs. When they finish, they check it off themselves. If it's up to your standards, you confirm the item is complete.
  </p>
  <p>
    Here comes the fun part! ChoreRunner has a reward system in place for completing chores. You can assign point values to tasks. For example, doing the dishes could be worth 5 points, mowing the lawn worth 10. Your family members can level up with enough points. A ranking board lets everyone see who is the most on top of their chores.
  </p>
  <p>
    ChoreRunner will organize that busy to-do list into something a little more manageable. Everyone wants to help, so help them show you how!
  </p>
  <div
    className="img-placeholder"
  >
    IMAGE/VIDEO PLACEHOLDER
  </div>
  <div
    className="img-placeholder"
  >
     IMAGE/VIDEO PLACEHOLDER
  </div>
  <div
    className="button-container"
  >
    <Link
      className="kid-button"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      tabIndex={1}
      to="/kidLogin"
    >
      I am a kid
    </Link>
    <Link
      className="parent-button"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      tabIndex={2}
      to="/login"
    >
      I am a parent
    </Link>
    <Link
      className="new-button"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      tabIndex={3}
      to="/register"
    >
      I am new
    </Link>
  </div>
</div>
`;
